--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: go to directory
       run: cd indexcylla-cpp
-    - name: make
-      run: make
+    - name: make all
+      run: make all
     - name: make clean
       run: make clean
