--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: go to directory
       run: cd indexcylla-cpp
-    - name: make indexcylla
-      run: make indexcylla
+    - name: make install-deps
+      run: make install-deps
+    - name: make
+      run: make
     - name: make clean
       run: make clean
